# madari-gtk

./: README.md  media.madari.app.json  meson.build
.github/workflows/: build.yml
data/: media.madari.app.desktop  media.madari.app.metainfo.xml  meson.build
src/: application.cpp  application.hpp  detail-view.ui  detail_view.cpp  detail_view.hpp  madari.gresource.xml  main.cpp  meson.build  preferences-window.ui  preferences_window.cpp  preferences_window.hpp  style.css  watch_history.cpp  watch_history.hpp  window.cpp  window.hpp  window.ui
src/stremio/: meson.build  stremio.hpp  stremio_addon_service.cpp  stremio_addon_service.hpp  stremio_client.cpp  stremio_client.hpp  stremio_parser.cpp  stremio_parser.hpp  stremio_types.cpp  stremio_types.hpp
src/trakt/: meson.build  trakt.hpp  trakt_service.cpp  trakt_service.hpp  trakt_types.hpp
