# Install desktop file
install_data(
  'media.madari.app.desktop',
  install_dir: get_option('datadir') / 'applications'
)

# Install AppStream metainfo
install_data(
  'media.madari.app.metainfo.xml',
  install_dir: get_option('datadir') / 'metainfo'
)

# Install icons
install_data(
  'icons/hicolor/256x256/apps/media.madari.app.png',
  install_dir: get_option('datadir') / 'icons/hicolor/256x256/apps'
)
