# Stremio Addon SDK sources
stremio_sources = files(
  'stremio_types.cpp',
  'stremio_parser.cpp',
  'stremio_client.cpp',
  'stremio_addon_service.cpp',
)

stremio_headers = files(
  'stremio.hpp',
  'stremio_types.hpp',
  'stremio_parser.hpp',
  'stremio_client.hpp',
  'stremio_addon_service.hpp',
)
